public class Constants {

    public const string IS_CROUCHING = "IsCrouching";
    public const string IS_JUMPING = "IsJumping";
    public const string IS_HIT_NOW = "isHitNow";
    public const string IS_MUSHROOM = "isMushroom";
    public const string HORIZONTAL_AXIS = "Horizontal";
    public const string HORIZONTAL_MOVEMENT = "HorizontalMovement";
    public const string FLOOR_TAG = "Floor";
    public const string BLOCK_TAG = "Block";
    public const string PLAYER_TAG = "Player";
}